feat-tp1: suite et fin

--- a/tp01.md
+++ b/tp01.md
@@ -39,8 +39,7 @@ Cette méthode permet même des options supplémentaires, innaccessible sans cet
 
 Si oubli de mot de passe root, on peut utiliser le rescue mode.
 Ce mode est un environnement de récupération, nous permettant des actions de réparation ou de modification sur notre systeme. Il est utile pour plusieurs raisons mais celle qui nous intéresse est la récupération de mot de passe root.
-Pour ceci il faut:
-
-1.
 
 ## 3.3 Redimentionnement partition
+
+Pour redimensionner une partition, on peut utiliser la commande parted.
