feat: ajout de précisions sur le rescue mode

--- a/tp01.md
+++ b/tp01.md
@@ -39,6 +39,7 @@ Cette méthode permet même des options supplémentaires, innaccessible sans cet
 
 Si oubli de mot de passe root, on peut utiliser le rescue mode.
 Ce mode est un environnement de récupération, nous permettant des actions de réparation ou de modification sur notre systeme. Il est utile pour plusieurs raisons mais celle qui nous intéresse est la récupération de mot de passe root.
+Lors de notre entrée en mode rescue, on est connecté en root, on peut alors changer son mot de passe en utilisant la commande `passwd`.
 
 ## 3.3 Redimentionnement partition
 
