feat: suite du tp2

--- a/tp02.md
+++ b/tp02.md
@@ -48,3 +48,79 @@ De plus pour protéger root dans une VM avec d'autres utilisateurs, on peut empe
 `PermitRootLogin no`
 
 Maintenant on ne peux plus se connecter, ni en tant que root et ni avec un mot de passe, il ne reste que la connexion à un utilisateur avec une clef ssh.
+
+## 2 Processus
+
+### 2.1 Exercice : Etude des processus UNIX
+
+#### 1
+
+Pour afficher la liste des processus on utilise la commande `ps aux`
+La colonne `TIME` indique le temps cumulé d'utilisation du processeur
+Pour savoir quel processus l'a utilisé le plus, on peut trier avec l'option `sort`: `ps aux --sort time`, dans mon cas on trouve `kworker` cumulant 0:04 temps d'utilisation.
+De la même manière on peut sort par la colonne `START`, on trouve `sbin/init`.
+
+Pour trouver l'heure de démarrage, on peut se fier à l'heure à laquel le premier processus à été lancé. Sinon ont peut aller vérifier l'heure d'écriture du premier processeur dans le dossier `proc` : `ls -ld /proc/1`
+En regardant le PID du dernier processus, on peut estimer le nombre de processus créés depuis le démarrage, ici on est aux alentours de 1100.
+
+#### 2
+
+`ps xao` permet d'afficher les colonnes que l'on veut, on doit lui passer des options.
+`ps xao pid,ppid,comm` par exemple permet d'afficher le `pid`, le `ppid` et le nom du processus.
+`ps axjf` permet elle d'afficher tous les processus en triant delon leur PPID.
+Quand on regarde les processus parents de `ps axjf`, on voit dans l'ordre:
+- bash
+- sshd-session: root@pts/0
+- sshd-session: root [priv]
+- sshd: /usr/sbin/sshd ...
+
+#### 3
+
+on met à jour le système `apt update`
+On cherche le package contenant `pstree` avec `apt search pstree` et on trouve:
+```
+psmisc/stable 23.7-2 amd64
+  utilities that use the proc file system
+```
+On l'installe avec `apt install psmisc`.
+
+`pstree` permet de voir un arbre de processus, on peut trier le résultat avec plusieurs options.
+
+#### 4
+
+Pour trier on peut utiliser `R R` puis naviguer sur la colonne qui nous intéresse, on trouve `systemd` qui utilise 14372bits de mémoire.
+Systemd est un service de gestion du système linux et ...
+Pour mettre `top` en couleur, on utilise la commande `z`.
+Pour highlight la colonne: `x`.
+Pour changer de colonne: `< ou >`.
+
+`htop` a l'avantage d'être colorée de base et plus simple à prendre en main je pense.
+Par contre elle n'est pas installée de base.
+
+## 3 Exercice 2: Arrêt d'un processus 
+
+Après écriture et lancement des deux scripts, on peut les arréter en utilisant:
+- `fg` puis `CTRL + C`
+- `ps aux | grep date` pour trouver le PID qui fait tourner le programme et `kill -9 1438` (ici notre PID) pour le tuer.
+
+Fonctionnement des scripts:
+- `#!/bin/sh` définit quel shell fait tourner le script.
+- `while true` crée une boucle infinie.
+- `do sleep 1` le met en pause de 1s.
+- `echo -n date` affiche `date` dans la console.
+- `date +%T` affiche la date `now` au format HH:mm:ss et `date --date '5 hours ago' +%T` renvoie la date indiquée par la chaine de caractère, toujours au format HH:mm:ss.
+- `done` met fin à la boucle infinie.
+
+## Exercice 3: Les tubes
+
+`cat` concatène un input et le renvoie.
+`tee` copie l'input pour le renvoyer dans l'output. Mais ne peut pas l'afficher ? 
+
+- `ls | cat` liste tous les fichiers d'un répertoire, puis les concatène pour les afficher dans la console.
+- `ls -l | cat > list` liste tous les fichiers d'un répertoire sous forme de liste complète, les concatène et cette fois l'écrit dans un nouveau fichier `list`
+- `ls -l | tee list` liste tous les fichiers d'un répertoire sous forme de liste complète, puis l'écrit dans le fichier `list` et l'affiche dans la console.
+- `ls -l | tee list | wc -l` liste tous les fichiers d'un répertoire sous forme de liste complète, puis l'écrit dans le fichier `list`, puis wl -c affiche dans la console le nombre de ligne du nouveau fichier crée.
+
+## 5 Journal système rsyslog
+
+
