feat: fin du tp, il manque qq petits trucs

--- a/tp02.md
+++ b/tp02.md
@@ -60,7 +60,7 @@ La colonne `TIME` indique le temps cumulé d'utilisation du processeur
 Pour savoir quel processus l'a utilisé le plus, on peut trier avec l'option `sort`: `ps aux --sort time`, dans mon cas on trouve `kworker` cumulant 0:04 temps d'utilisation.
 De la même manière on peut sort par la colonne `START`, on trouve `sbin/init`.
 
-Pour trouver l'heure de démarrage, on peut se fier à l'heure à laquel le premier processus à été lancé. Sinon ont peut aller vérifier l'heure d'écriture du premier processeur dans le dossier `proc` : `ls -ld /proc/1`
+Pour trouver l'heure de démarrage, on peut se fier à l'heure à laquel le premier processus à été lancé. Sinon ont peut aller vérifier l'heure d'écriture du premier processeur dans le dossier `proc` : `ls -ld /proc/1`
 En regardant le PID du dernier processus, on peut estimer le nombre de processus créés depuis le démarrage, ici on est aux alentours de 1100.
 
 #### 2
@@ -113,8 +113,8 @@ Fonctionnement des scripts:
 
 ## Exercice 3: Les tubes
 
-`cat` concatène un input et le renvoie.
-`tee` copie l'input pour le renvoyer dans l'output. Mais ne peut pas l'afficher ? 
+`cat` concatène un fichier ou un pipe et le renvoie à l'output.
+`tee`lit l'input (pipe ou autre) et l'écrit dans un fichier. 
 
 - `ls | cat` liste tous les fichiers d'un répertoire, puis les concatène pour les afficher dans la console.
 - `ls -l | cat > list` liste tous les fichiers d'un répertoire sous forme de liste complète, les concatène et cette fois l'écrit dans un nouveau fichier `list`
@@ -122,3 +122,24 @@ Fonctionnement des scripts:
 - `ls -l | tee list | wc -l` liste tous les fichiers d'un répertoire sous forme de liste complète, puis l'écrit dans le fichier `list`, puis wl -c affiche dans la console le nombre de ligne du nouveau fichier crée.
 
 ## 5 Journal système rsyslog
+
+- Le service `rsyslog` est démarré sur ma VM, le PID du démon est 1267.
+- `rsyslog` écrit les logs dans plusieurs fichiers. 
+  - `/var/log/syslog` pour tous les fichiers sauf !:
+  - `/var/log/auth.log` pour les log d'authentification.
+  - `/var/log/cron.log` pour les log du cron.
+  - `/var/log/kern.log` pour les log du noyaux (kernel).
+  - `/var/log/mail.log` pour les log du service smtp (je suppose).
+  - `/var/log/user.log` pour les log d'utilisateur.
+En regardant dansle répertoire, on voit que auth est quasi vide (on y voit que ma connection root de cette session). user.log et mail.log sont inexistants et Cron quasi vide également. Par contre les logs du kernel et défaut sont remplis.
+
+- Le service cron sert à lancer des scripts à intervals réguliers.
+
+- `tail` sert à afficher les dernières lignes d'un fichier. L'option `-f` sert à rendre en temps réel des ajout au fichier regardé, c'est très utile quand on regarde un fichier de log justement. N'ayant pas de fichier `var/log/message` je peux regarder l'impact du démarrage d'un cron dans le fichier `var/log/cron.log` en temps réel.
+
+- `logrotate` est un service d'archivage des logs. Il possède des options modifiable dansle fichier `/etc/logrotate.conf` comme la compression, la fréquence d'archivage, le renommage du fichier de log, etc.
+
+- `dmesg` est une commande qui donne beaucoup d'infos sur le kernel. On peut y trouver les interractions avec les composants materiels, notamment avec la carte resaux sur cette ligne:
+`[    0.854053] e1000 0000:00:03.0 eth0: Intel(R) PRO/1000 Network Connection`
+Ou le processeur:
+`[    0.000007] tsc: Detected 2495.998 MHz processor` même si je ne trouve pas son nom
