feat: tentative d'expliquer systemd

--- a/tp02.md
+++ b/tp02.md
@@ -89,7 +89,7 @@ On l'installe avec `apt install psmisc`.
 #### 4
 
 Pour trier on peut utiliser `R R` puis naviguer sur la colonne qui nous intéresse, on trouve `systemd` qui utilise 14372bits de mémoire.
-Systemd est un service de gestion du système linux et ...
+Systemd est une collection de service de gestion du système linux. Il s'occupe d'énormément de chose, dont par exemple le démarrage du système, ou une partie de la connexion internet, etc.
 Pour mettre `top` en couleur, on utilise la commande `z`.
 Pour highlight la colonne: `x`.
 Pour changer de colonne: `< ou >`.
